--- a/date/2024-10/page-2.htm
+++ b/date/2024-10/page-2.htm
@@ -238,7 +238,7 @@
                         <div class="clearfix"> </div>
                     </div>
                             </div>
-            <ul class="pagination"><li><a href="/date/2024-10/">&laquo;</a></li> <li><a href="/date/2024-10/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2024-10/page-3.htm">3</a></li><li><a href="/date/2024-10/page-4.htm">4</a></li> <li><a href="/date/2024-10/page-3.htm">&raquo;</a></li></ul>            <!-- //welcome -->
+            <ul class="pagination"><li><a href="/date/2024-10/">&laquo;</a></li> <li><a href="/date/2024-10/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2024-10/page-3.htm">3</a></li> <li><a href="/date/2024-10/page-3.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
         <div class="col-md-3">
             <div class="panel panel-default">
@@ -247,16 +247,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-30074.htm" title="简单宠物寄养协议（宠物店宠物寄养协议）">简单宠物寄养协议（宠物店宠物寄养协议）</a></li>
-                        <li class="py-2"><a href="/news/article-23635.htm" title="linux服务器磁盘满了的处理方法">linux服务器磁盘满了的处理方法</a></li>
-                        <li class="py-2"><a href="/news/article-31586.htm" title="一文搞定CompletableFuture并行处理，成倍缩短查询时间。">一文搞定CompletableFuture并行处理，成倍缩短查询时间。</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-4-node-share.htm" title="6月4日→20.5M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">6月4日→20.5M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-15-node-share-links.htm" title="3月15日19.6M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接">3月15日19.6M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-30-free-shadowrocket-node.htm" title="5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-20-free-subscribe-node.htm" title="7月20日→21.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">7月20日→21.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-33970.htm" title="在C ++中替换后检查Word是否有效">在C ++中替换后检查Word是否有效</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-27-free-v2ray.htm" title="5月27日→20.1M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">5月27日→20.1M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-3-free-ssr-node.htm" title="9月3日→18.1M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">9月3日→18.1M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-32532.htm" title="人打动物疫苗多少钱一针啊 人打动物疫苗多少钱一针啊图片">人打动物疫苗多少钱一针啊 人打动物疫苗多少钱一针啊图片</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-19-free-clash.htm" title="12月19日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐">12月19日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-34906.htm" title="河南省动物疫病预防控制中心（河南省动物疫病预防控制中心地址）">河南省动物疫病预防控制中心（河南省动物疫病预防控制中心地址）</a></li>
+                        <li class="py-2"><a href="/news/article-32052.htm" title="宠物店猫疫苗多少钱一针（宠物店猫疫苗多少钱一针打）">宠物店猫疫苗多少钱一针（宠物店猫疫苗多少钱一针打）</a></li>
+                        <li class="py-2"><a href="/news/article-30158.htm" title="宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）">宠物领养平台app推荐下载苹果手机（宠物领养平台app推荐下载苹果手机软件）</a></li>
+                        <li class="py-2"><a href="/news/article-21794.htm" title="QQ截图工具截取">QQ截图工具截取</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-10-free-high-speed-nodes.htm" title="11月10日→18.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐">11月10日→18.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-27-free-clash-subscribe.htm" title="10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐">10月27日→21M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-35378.htm" title="动物医院开设条件是什么样的呢（开动物医院需要多少资金）">动物医院开设条件是什么样的呢（开动物医院需要多少资金）</a></li>
+                        <li class="py-2"><a href="/news/article-35379.htm" title="宠物粮市场分析论文范文怎么写（宠物粮市场开发方案）">宠物粮市场分析论文范文怎么写（宠物粮市场开发方案）</a></li>
                     </ul>
     </div>
 </div>
@@ -268,7 +268,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
@@ -277,31 +277,7 @@
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-08/" title="2024-08 归档">2024-08</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-07/" title="2024-07 归档">2024-07</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2024-06/" title="2024-06 归档">2024-06</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-05/" title="2024-05 归档">2024-05</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2024-04/" title="2024-04 归档">2024-04</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-03/" title="2024-03 归档">2024-03</a></h4>
-            </li>
-                        <li class="py-2">
-                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2024-02/" title="2024-02 归档">2024-02</a></h4>
+                <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
             </li>
                     </ul>
     </div>
